# nitbox

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  seed-calendar.yml  seed-matches-finished.yml  seed-predictions.yml  seed-squads.yml
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/prisma/: schema.prisma  schema.sql
apps/api/prisma/seed/: api.ts  backfill-player-bio-individual.ts  backfill-player-bio.ts  config.ts  index.ts  test-enrich.ts
apps/api/src/: app.module.ts  main.ts
apps/api/src/controllers/: awards.controller.ts  competitions.controller.ts  matches.controller.ts  players.controller.ts  standings.controller.ts  stats.controller.ts  teams.controller.ts
apps/api/src/services/: awards.service.ts  competitions.service.ts  matches.service.ts  players.service.ts  standings.service.ts  stats.service.ts  teams.service.ts
apps/api/src/sync/: api-football.client.ts  enrich.service.ts  live-sync.service.ts  pre-match.service.ts  standings-live.service.ts  sync.module.ts
apps/cms/: package-lock.json  package.json
apps/cms/src/: payload-types.ts  payload.config.ts
apps/cms/src/collections/: Articles.ts
apps/ml/: db.py  main.py  pyproject.toml  requirements.txt
apps/ml/routers/: predictions.py  ratings.py
apps/ml/services/: features.py  predictor.py  ratings.py
apps/web/: next.config.mjs  package.json  tailwind.config.js
apps/web/src/app/: globals.css  (+4 more)
nginx/conf.d/: api.conf
scripts/: export-static.ts
(+48 files in other folders)
